--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Undervalued RE crawler",
   "main": "index.js",
   "scripts": {
-    "test": "protractor conf.js"
+    "test": "protractor Configuration/conf.js"
   },
   "keywords": [
     "protractor"
@@ -18,5 +18,8 @@
     "jasmine-spec-reporter": "^4.2.1",
     "protractor": "^5.4.1",
     "protractor-beautiful-reporter": "^1.2.5"
+  },
+  "dependencies": {
+    "yargs": "^12.0.5"
   }
 }
